--- a/module3/css/ss6_css/bai_tap/bai_tap_3_tao_trang_doc_truyen/bai_tap_3_file_html.html
+++ b/module3/css/ss6_css/bai_tap/bai_tap_3_tao_trang_doc_truyen/bai_tap_3_file_html.html
@@ -21,17 +21,21 @@
 <div id="body">
     <div class="story-col">
         <a href="https://isach.info/story.php?story=hoi_ki_toi_loi__lang_tu_co_doc">
-        <img class="story-cover" src="http://isach.info/images/story/cover/hoi_ki_toi_loi__lang_tu_co_doc.jpg"></a>
-        <p>Tác giả: Lãng Tử Cô Độc<br>
-            Thể loại: Trinh Thám</p>
-        <a href="https://isach.info/story.php?story=hoi_ki_toi_loi__lang_tu_co_doc">Hồi ký tội lỗi</a>
+            <img class="story-cover" src="http://isach.info/images/story/cover/hoi_ki_toi_loi__lang_tu_co_doc.jpg"></a>
+        <div class="story-info" >
+            <p>Tác giả: <i>Lãng Tử Cô Độc</i><br>
+                Thể loại: <i>Trinh Thám</i></p>
+            <a href="https://isach.info/story.php?story=hoi_ki_toi_loi__lang_tu_co_doc"><b>Hồi ký tội lỗi</b></a>
+        </div>
     </div>
-    <div class="story-col" >
+    <div class="story-col">
         <a href="https://truyenfull.vn/me-an-duong-trieu/">
             <img class="story-cover" src="https://otruyen.net/images/story/300x390/me-an-duong-trieu.jpg"></a>
-        <p>Tác giả:Tử Dạ<br>
-            Thể loại:Trinh Thám, Cổ Đại</p>
-        <a href="https://truyenfull.vn/me-an-duong-trieu/">Mê án đường triểu</a>
+        <div  class="story-info" >
+            <p>Tác giả: <i>Tử Dạ</i><br>
+                Thể loại: <i>Trinh Thám, Cổ Đại</i></p>
+            <a href="https://truyenfull.vn/me-an-duong-trieu/"><b>Mê án đường triều</b></a>
+        </div>
     </div>
 </div>
 
