--- a/module3/css/ss6_css/bai_tap/bai_tap_3_tao_trang_doc_truyen/bai_tap_3_file_html.html
+++ b/module3/css/ss6_css/bai_tap/bai_tap_3_tao_trang_doc_truyen/bai_tap_3_file_html.html
@@ -25,7 +25,7 @@
         <div class="story-info" >
             <p>Tác giả: <i>Lãng Tử Cô Độc</i><br>
                 Thể loại: <i>Trinh Thám</i></p>
-            <a href="https://isach.info/story.php?story=hoi_ki_toi_loi__lang_tu_co_doc"><b>Hồi ký tội lỗi</b></a>
+            <a href="https://isach.info/story.php?story=hoi_ki_toi_loi__lang_tu_co_doc"><b>Hồi Ký Tội Lỗi</b></a>
         </div>
     </div>
     <div class="story-col">
@@ -34,9 +34,28 @@
         <div  class="story-info" >
             <p>Tác giả: <i>Tử Dạ</i><br>
                 Thể loại: <i>Trinh Thám, Cổ Đại</i></p>
-            <a href="https://truyenfull.vn/me-an-duong-trieu/"><b>Mê án đường triều</b></a>
+            <a href="https://truyenfull.vn/me-an-duong-trieu/"><b>Mê Án Đường Triều</b></a>
         </div>
     </div>
+    <div class="story-col">
+        <a href="https://truyenfull.vn/roi-vao-ngan-ha/">
+            <img class="story-cover" src="https://img.dtruyen.com/public/images/large/roivaonganhaMPD2itjQX1.jpg"></a>
+        <div class="story-info" >
+            <p>Tác giả: <i>Trương Tiểu Tố</i><br>
+                Thể loại: <i>Ngôn Tình, Trinh Thám</i></p>
+            <a href="https://truyenfull.vn/roi-vao-ngan-ha/"><b>Rơi Vào Ngân Hà</b></a>
+        </div>
+    </div>
+    <div class="story-col">
+        <a href="https://truyenfull.vn/mat-trai-cua-su-that/">
+            <img class="story-cover" src="https://static.8cache.com/cover/eJzLyTDWz3GpzMvz9jPKS61KMrcIrggxcI_McDRxdC8K8cpyT_NKMzIxqizKDTRP8irz8aj0TqyIqHCLMg8yLa9yzjbPcPXwNCq0SItMNygxNDAxcfeLdLQtNgAAMskc2g==/mat-trai-cua-su-that.jpg"></a>
+        <div class="story-info" >
+            <p>Tác giả: <i>Khánh Du</i><br>
+                Thể loại: <i>Ngôn Tình, Đô Thị, <br>Trinh Thám, Nữ Cường, Khác</i></p>
+            <a href="https://truyenfull.vn/mat-trai-cua-su-that/"><b>Mặt Trái Của Sự Thật</b></a>
+        </div>
+    </div>
+
 </div>
 
 <div id="footer"></div>
