--- a/module3/css/ss7_web_layout/bai_tap/bai_tap_4_phat_trien_web_xem_hoat_hinh_truc_tuyen/bt4_web_hoat_hinh_html.html
+++ b/module3/css/ss7_web_layout/bai_tap/bai_tap_4_phat_trien_web_xem_hoat_hinh_truc_tuyen/bt4_web_hoat_hinh_html.html
@@ -7,16 +7,89 @@
 
 </head>
 <body>
-<div id="header" class="row col-12 col-sm-12">
-    <div class="row col-12 col-sm-12"></div>
-    <div class="row col-12 col-sm-12"></div>
-</div>
+<div class="main row">
+    <div id="header" class="col-12 col-sm-12 col-xs-12">
+        <div id="head-logo" class="row col-12 col-sm-12 col-xs-12">
+            <i>Phim <b id="hoat-hinh">Hoạt Hình</b></i>
+        </div>
+    </div>
 
-<div id="body" class="row col-12 col-sm-12">
-    <div class="col-4 col-sm-1"></div>
-    <div class="col-8 col-sm-11"></div>
-</div>
+    <div class="nav">
+        <div id="head-link" class="row col-12 col-sm-12 col-xs-12">
+            <span>Phim hoạt hình</span><span>|</span>
+            <span>Phim hoạt hình yêu thích</span><span>|</span>
+            <span>Nhân vật hoạt hình</span><span>|</span>
+            <span>Góp ý</span>
+        </div>
+    </div>
 
-<div id="footer" class="row col-12 col-sm-12"></div>
+    <div id="body" class="col-12 col-sm-12  col-xs-12">
+        <div class="col-4 display">
+            <div class="row">
+                <div class="video-menu col-sm-12">
+                    <iframe width="90%" src="https://www.youtube.com/embed/t0Q2otsqC4I"
+                            title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                    </iframe>
+                    <p class="video-title">Tom & Jerry | Tom & Jerry in Full Screen </p>
+                    <p class="seen-quantity">141.246.795 lượt xem</p>
+                    <p></p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="video-menu col-sm-12">
+                    <iframe width=90%
+                            src="https://www.youtube.com/embed/LGSrWPQ46vA"
+                            title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+                    </iframe>
+                    <p class="video-title">Shaun the Sheep | Troublesome Tractor x3 Episodes</p>
+                    <p class="seen-quantity">43.576.467 lượt xem</p>
+                    <p></p>
+                </div>
+
+
+            </div>
+        </div>
+
+        <div class="col-8 col-sm-12">
+            <div class="main-video col-12 col-sm-12 col-xs-12">
+                <iframe width=95% height=315px
+                        src="https://www.youtube.com/embed/5oH9Nr3bKfw"
+                        title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen>
+                </iframe>
+                <p class="video-title">Tom & Jerry | A Bit of Fresh Air!</p>
+                <p class="seen-quantity">36.079.771 lượt xem</p>
+                <p id="video-description">Tom & Jerry thrive most outside, and they can't wait for the nice weather to
+                    come around! Enjoy this compilation with the best moments in the fresh air!
+
+                    Catch up with Tom & Jerry as they chase each other, avoid Spike, and play with friends like Little
+                    Quacker and Butch the cat.
+
+                    WB Kids is the home of all of your favorite clips featuring characters from the Looney Tunes,
+                    Scooby-Doo, Tom and Jerry and More!
+                    <br>
+                    <br>#WBKids #KidsCartoons #TomandJerry
+
+                    <br>Tom & Jerry available on digital!
+                    <br>
+                    <br>MORE VIDEOS HERE
+                    <br>►https://www.youtube.com/wbkids
+                    <br>MORE GAMES & ACTIVITIES HERE
+                    <br>►https://www.wbkidsgo.com/</p>
+            </div>
+        </div>
+    </div>
+
+
+    <div id="footer" class="row col-12 col-sm-12  col-xs-12"></div>
+</div>
 </body>
 </html>
