--- a/module3/css/ss7_web_layout/bai_tap/bai_tap_4_phat_trien_web_xem_hoat_hinh_truc_tuyen/bt4_web_hoat_hinh_html.html
+++ b/module3/css/ss7_web_layout/bai_tap/bai_tap_4_phat_trien_web_xem_hoat_hinh_truc_tuyen/bt4_web_hoat_hinh_html.html
@@ -54,6 +54,23 @@
 
 
             </div>
+            <div class="row">
+                <div class="video-menu col-sm-12">
+                    <iframe width=90%
+                            src="https://www.youtube.com/embed/4k6408EOqOE"
+                            title="YouTube video player"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen>
+
+                    </iframe>
+                    <p class="video-title"> Larva | Little Larva</p>
+                    <p class="seen-quantity">17.781.184 lượt xem</p>
+                    <p></p>
+                </div>
+
+
+            </div>
         </div>
 
         <div class="col-8 col-sm-12">
