--- a/module4/ss12_jquery_ajax/bai_tap/bai_tap_2_quan_ly_dien_thoai_html/list.html
+++ b/module4/ss12_jquery_ajax/bai_tap/bai_tap_2_quan_ly_dien_thoai_html/list.html
@@ -2,9 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+
+<table id="phoneList">
+
+</table>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script>
+  function getPhoneList(){
+      
+  }
+
+
+
+</script>
+
+
 </body>
 </html>
